@@ -36,12 +36,6 @@ has_field 'firstname' => (
     size =>  60,
 );
 
-has_field 'year_of_birth' => (
-    type => 'Text',
-    lable => 'Year of birth',
-    size => 40,
-);
-
 has_field 'birthdate' => (
     type => 'Text',
     label => 'Birthdate',
@@ -52,12 +46,6 @@ has_field 'birthplace' => (
     type => 'Text',
     label => 'Birthplace',
     size =>  60,
-);
-
-has_field 'year_of_death' => (
-    type => 'Text',
-    lable => 'Year of death',
-    size => 40,
 );
 
 has_field 'deathdate' => (
@@ -173,9 +161,9 @@ has_field 'submit' => ( type => 'Submit', value => 'Speichern' );
 has_block 'biography' => (
     tag => 'fieldset',
     render_list => [ qw(
-        familyname  birthname       firstname   year_of_birth   birthdate
-        birthplace  year_of_death   deathdate   deathplace      gnd         
-        categories  workplace       country     submit
+        familyname  birthname   firstname   birthdate    birthplace  
+        deathdate   deathplace  gnd         categories   workplace 
+        country     submit
     )],
 );
 
